Bug 258993 - [MediaStream] enumerateDevices should not expose devices that can not be used
Summary: [MediaStream] enumerateDevices should not expose devices that can not be used
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-07-07 13:49 PDT by Eric Carlson
Modified: 2023-07-11 08:36 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2023-07-07 13:49:50 PDT
enumerateDevices should not exposed a device if it can not be instantiated.
Comment 1 Eric Carlson 2023-07-07 13:50:13 PDT
rdar://rdar://110210394
Comment 2 Eric Carlson 2023-07-07 14:03:57 PDT
rdar://110210394
Comment 3 Eric Carlson 2023-07-07 14:14:22 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15648
Comment 4 EWS 2023-07-10 15:50:19 PDT
Committed 265923@main (f4537682e879): <https://commits.webkit.org/265923@main>

Reviewed commits have been landed. Closing PR #15648 and removing active labels.
Comment 5 Eric Carlson 2023-07-11 06:59:26 PDT
Reopening to fix asserts when non-mock sources.
Comment 6 Eric Carlson 2023-07-11 07:04:07 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15739
Comment 7 EWS 2023-07-11 08:36:30 PDT
Committed 265947@main (33ede2d58916): <https://commits.webkit.org/265947@main>

Reviewed commits have been landed. Closing PR #15739 and removing active labels.